--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-moment": "^1.1.3",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "@apollo/client": "^3.5.0",
     "simple-react-validator": "^1.6.2",
     "sweetalert": "^2.1.2",
     "web-vitals": "^4.2.4"
