--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.0",
+    "@svgr/plugin-svgo": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
@@ -11,12 +13,15 @@
     "bootstrap-icons": "^1.11.3",
     "moment": "^2.30.1",
     "path-browserify": "^1.0.1",
+    "postcss": "^8.4.49",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "resolve-url-loader": "^5.0.0",
     "simple-react-validator": "^1.6.2",
+    "svgo": "^3.3.2",
     "sweetalert": "^2.1.2",
     "web-vitals": "^4.2.4"
   },
